fix for overlapping pagination ui

--- a/styles/courses.scss
+++ b/styles/courses.scss
@@ -14,7 +14,7 @@
     }
   
     .page-item {
-      margin: 0 0.25rem;
+      margin: 1rem 0.25rem;
       padding: 0;
       &.active,
       &.disabled {
